--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@ body {
   margin: 0px;
 }
 
-h1, h2, h3, h4, h5, h6 {  
+h1, h2, h3, h4, h5, h6, p {  
   margin: 0px;
+  font-family:'Inter', sans-serif ;
 }
